Upgrade to Java 19 and update dependencies